# smart

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  LICENSE  NOTICE  README.md  TOOL.md  justfile  mcp.json  opencode.json  setup-manual.ps1
mcp-servers/mcp-db/: pyproject.toml
mcp-servers/mcp-scada/: pyproject.toml
mcp-servers/mcp-scada/tests/: test_agent_contract.py  test_compliance_gating.py  test_mcp_config.py  test_prompts_resources.py  test_server.py  test_write_gating.py
scada-reporter/backend/: .env.example  .env.production.example  TAGS.md  alembic.ini  bench_ingest.py  bench_sqlite_pragmas.py  gen_cert.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev.py  run_service.py  scada_reporter.db  smoke_copy_ingest.py
scada-reporter/backend/alembic/: env.py
scada-reporter/backend/app/: import_catalog.py  main.py  seed_catalog.py  seed_deadband.py  seed_excel_template.py  seed_facility_variables.py  seed_tags.py  seed_users.py
scada-reporter/backend/certs/: client.der  client.pem  client2.pem  client2_key.pem  client_key.pem  server_live.der
scada-reporter/backend/docs/: backup-restore.md
scada-reporter/backend/tests/: conftest.py  test_advanced_reports_variables_api.py  test_annotations.py  test_api.py  test_app_settings.py  test_audit_log.py  test_auth_json_login.py  test_auth_language.py  test_auth_me.py  test_auth_token_validation.py  test_backup_api.py  test_backup_engine.py  test_backup_progress.py  test_collector_failures.py  test_compliance_api.py  test_compliance_assistant.py  test_compliance_config_api.py  test_compliance_engine.py  test_compliance_models.py  test_compliance_report.py  test_config.py  (+113 more)
(+553 files in other folders)
