[project]
name = "mcp-server-scada-db"
version = "0.1.0"
description = "MCP server for SCADA database schema discovery"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.30.0",
]

[project.scripts]
mcp-server-scada-db = "mcp_db.server:main"

[tool.setuptools.packages.find]
where = ["src"]
