[project]
name = "mcp-server-scada"
version = "0.1.0"
description = "MCP server exposing Ekont Smart Scada Reporter tools for AI agents"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "scada-core",
]

[project.scripts]
mcp-server-scada = "mcp_scada.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
