[project]
name = "scada-reporter-backend"
version = "1.0.0"
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n auto"
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 69

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["app.collector.opcua_server", "app.services.chart_generator"]
ignore_errors = true
